# termcfg

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Notations.md  README.md
.github/workflows/: ci.yml
examples/: toml_crossterm.rs  yaml_termion.rs
src/: crossterm_config.rs  error.rs  event.rs  lib.rs  style.rs  termion_config.rs
src/crossterm_config/: attribute_serde.rs  content_style_serde.rs  convert.rs  event_serde.rs  event_set_serde.rs  option_content_style_serde.rs
src/crossterm_config/convert/: content_style.rs  event.rs
src/event/: event_def.rs  format.rs  parse.rs
src/style/: format.rs  parse.rs  style_def.rs
src/termion_config/: content_style_serde.rs  event_serde.rs  event_set_serde.rs  option_content_style_serde.rs
src/termion_config/convert/: content_style.rs  event.rs
